@@ -1,0 +1,22 @@
+/* XPM */
+static const char *crosshair[]={
+"16 16 3 1",
+". c None",
+"# c #000000",
+"a c #dcdcdc",
+".......#........",
+"................",
+".......#........",
+"................",
+".......#........",
+"................",
+".......#........",
+"#.#.#.#.#a#.#.#.",
+".......#........",
+"................",
+".......#........",
+"................",
+".......#........",
+"................",
+".......#........",
+"................"};
